# toyc-compiler

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Justfile  README.md  deep-research-report.md  runtime.stderr  词汇翻译表.md
artifacts/: block_local_dead_writeback_report.md  cpp_java_port_p0_ir_report.md  cpp_java_port_p1_frontend_backend_report.md  cpp_java_port_p2_repair_r1_report.md  independent_java_cpp_route_audit.md  java_ir_to_cpp_design.md  java_pass_inventory.csv  java_to_cpp_refactor_mapping.md  src_abi_repair_report.md  src_runtime_validation_report.md
artifacts/independent_audit/: run_audit.ps1  src_vs_java_p2c_independent_audit.md
artifacts/independent_audit/audit_cases/: diag_global_init_call.tc  diag_global_init_id.tc  diag_void_in_expr.tc  diag_void_return_value.tc  diag_wrong_arg_count.tc  p1_div_mod.tc  p1_logic_norm_or.tc  p1_parentheses.tc  p1_precedence.tc  p2_add_call.tc  p2_assignment.tc  p2_dangling_else.tc  p2_fact.tc  p2_fib.tc  p2_forward9.tc  p2_local_init.tc  p2_nested_call.tc  p2_scope_shadow.tc  p2_sum12.tc  p2_sum9.tc  p2_sum9_nested_ids.tc  p2_sumdown9.tc  p2_void_sink.tc  p2_while_break.tc  p2_while_continue_sum.tc  p2c_global_const_expr.tc  p2c_global_cross_fn.tc  p2c_global_init_short_and.tc  p2c_global_init_short_or.tc  (+7 more)
artifacts/rv32_harness_selftest/: return_0.elf  return_0.s  return_1.elf  return_1.s  return_42.elf  return_42.s  return_42.stderr  return_int_min.elf  return_int_min.s  return_int_min.stderr  return_minus_1.elf  return_minus_1.s  return_minus_1.stderr  selftest_results.psv
cmake/: CompilerWarnings.cmake
docs/: architecture.md  backend-spec.md  build-and-test.md  development-phases.md  ir-spec.md  team-plan.md
docs/contracts/: ast-contract.md  frontend-contract.md  ir-contract.md  ir_backend_contract.md  parser-contract.md  sema-input-contract.md
src/analysis/: cfg.cpp  dominance_frontier.cpp  dominator_tree.cpp  scaffold.cpp
src/backend/: frame_layout.cpp  riscv_emitter.cpp
src/codegen/: BackendOptions.h  CallingConvention.cpp  CallingConvention.h  ContractIR.h  FunctionEmitter.cpp  FunctionEmitter.h  InstructionSelector.cpp  InstructionSelector.h  IrOperandUtils.cpp  IrOperandUtils.h  RiscvBackend.cpp  RiscvBackend.h  RiscvEmitter.cpp  StackFrame.cpp  VRegCollector.cpp  VRegCollector.h
src/common/: token.h
src/driver/: compiler_pipeline.cpp  main.cpp  options.cpp
src/frontend/: ast.cpp  ast_printer.cpp  lexer.cpp  parser.cpp  semantic_analyzer.cpp  token.cpp
src/ir/: alloca_promotability.cpp  basic_block.cpp  builder.cpp  cfg.cpp  contract_ir_generator.h  def_use.cpp  dominator_tree.cpp  function.cpp  instruction.cpp  ir.h  ir_builder.cpp  ir_printer.cpp  ir_type.cpp  ir_verifier.cpp  mem2reg.cpp  module.cpp  printer.cpp  scaffold.cpp  value.cpp  verifier.cpp
src/lexer/: lexer.cpp  lexer.h
src/lowering/: ast_to_ir.cpp
src/mir/: instruction_selector.cpp  mir.cpp  mir_copy_prop.cpp  mir_dead_vreg.cpp  mir_dead_writeback.cpp  mir_liveness.cpp  mir_slot_forwarding.cpp  scaffold.cpp
src/parser/: parser.cpp  parser.h
src/passes/: dce.cpp  inst_combine.cpp  ir_utils.cpp  mem2reg.cpp  out_of_ssa.cpp  scaffold.cpp  sccp.cpp  simplify_cfg.cpp
src/sema/: const_eval.h  constant_evaluator.cpp  return_check.cpp  scaffold.cpp  scope.cpp  sema.cpp  sema.h  semantic_analyzer.cpp  semantic_model.cpp  semantic_model_printer.cpp
src/support/: diagnostics.cpp
src2/ast/: ast.h
src2/codegen/: BackendOptions.h  RiscvBackend.cpp
src2/common/: diagnostic.h  optimization_level.h  token_stream.h
src2/driver/: main.cpp
src2/ir/: contract_ir_generator.cpp  ir_cfg.cpp  ir_cfg.h  ir_optimizer.cpp  ir_optimizer.h  ir_passes.cpp  ir_passes.h
src2/lexer/: lexer.h
src2/parser/: parser.cpp
src2/sema/: const_eval.cpp  return_check.h  scope.h  semantic_model.h  symbol.h  type.h
tests/: README.md
tests/analysis/: dominance_frontier_test.cpp  dominator_tree_test.cpp
tests/backend/: riscv_emitter_test.cpp
tests/frontend/: ast_test.cpp  driver_dump_ast_test.cpp  driver_dump_tokens_test.cpp  frontend_smoke_test.cpp  lexer_error_test.cpp  lexer_test.cpp  lexer_tests.cpp  parser_error_test.cpp  parser_p1_tests.cpp  parser_p2_tests.cpp  parser_p3_tests.cpp  parser_p4_tests.cpp  parser_p5_tests.cpp  parser_test.cpp  parser_test_helpers.h  token_stream_tests.cpp  token_test.cpp
tests/integration/: README.md  codegen_snapshot_tests.cpp  driver_test.cmake  measure_codegen_opt.py  run_toyc_exec_cases.sh
tests/ir/: analysis_test.cpp  cfg_test.cpp  ir_builder_test.cpp  ir_model_test.cpp  ir_printer_test.cpp  ir_smoke_test.cpp  ir_verifier_test.cpp  mem2reg_test.cpp
tests/lowering/: driver_dump_ir_test.cpp  lowering_basic_test.cpp  lowering_control_flow_test.cpp  lowering_error_test.cpp  lowering_global_test.cpp  lowering_short_circuit_test.cpp
tests/mir/: mir_basic_test.cpp  mir_dead_writeback_test.cpp
tests/passes/: driver_dump_ssa_test.cpp  mem2reg_test.cpp  p7a_optimization_test.cpp  ssa_verifier_test.cpp
tests/sema/: constant_evaluator_test.cpp  control_flow_test.cpp  driver_dump_sema_test.cpp  scope_test.cpp  semantic_analyzer_test.cpp  semantic_error_test.cpp  symbol_test.cpp
tests/unit/: codegen_backend_smoke_tests.cpp  codegen_branch_fusion_tests.cpp  codegen_calling_convention_tests.cpp  codegen_peephole_tests.cpp  codegen_register_allocator_tests.cpp  codegen_stack_frame_tests.cpp  codegen_vreg_cache_tests.cpp  codegen_vreg_collector_tests.cpp  ir_contract_generator_tests.cpp  ir_optimizer_tests.cpp  sema_analysis_tests.cpp  sema_const_eval_tests.cpp  sema_model_tests.cpp  sema_return_check_tests.cpp  sema_symbol_tests.cpp
tools/: rvtest.sh
tools/src_backend_regression/: README.md  run.ps1  run_runtime.ps1  run_runtime.sh
tools/triple_diff/: README.md  build_inside_wsl.sh  dual_regression.sh  run.ps1  run_dual_regression.py  run_java_test.sh  run_regression_v2.py  run_triple_diff.sh  rv32_harness_selftest.py  rv32_split_tohost_link.ld  rv32_split_tohost_start.s
toy-c-compiler-master/: .gitignore  Makefile  ToyC编译器整体设计文档.md  pom.xml
toy-c-compiler-master/scripts/: bench.sh
(+876 files in other folders)
